@@ -118,8 +118,8 @@ the Null-conduit settings.</comment>
                             <string>&lt;qt&gt;The Null-conduit can be attached to several databases, effectively preventing them from Syncing. Enter the database names here.&lt;/qt&gt;</string>
                         </property>
                     </widget>
-                    <spacer row="2" column="1">
-                        <property name="name">
+                    <spacer row="3" column="1">
+                        <property name="name" stdset="0">
                             <cstring>Spacer4</cstring>
                         </property>
                         <property name="orientation">
@@ -128,7 +128,24 @@ the Null-conduit settings.</comment>
                         <property name="sizeType">
                             <enum>Expanding</enum>
                         </property>
+                        <property name="sizeHint">
+                            <size>
+                                <width>20</width>
+                                <height>20</height>
+                            </size>
+                        </property>
                     </spacer>
+                    <widget class="QCheckBox" row="2" column="1">
+                        <property name="name">
+                            <cstring>fFailImmediately</cstring>
+                        </property>
+                        <property name="text">
+                            <string>Simulate Failure</string>
+                        </property>
+                        <property name="whatsThis" stdset="0">
+                            <string>Force the conduit to simulate a failure to perform the HotSync.</string>
+                        </property>
+                    </widget>
                 </grid>
             </widget>
         </widget>
